<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tets9"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/TimeTable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="1dp"
        android:onClick="Timetable_layer"
        android:text="@string/Timetable_button_name"
        android:textSize="30sp"
        app:backgroundTint="#C444595E"
        app:layout_constraintBottom_toTopOf="@+id/ContentShare_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Kamar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="263dp"
        android:onClick="Kamar_layer"
        android:text="@string/Kamar_button_name"
        android:textSize="30sp"
        app:backgroundTint="#C444595E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Revision_button" />

    <Button
        android:id="@+id/Revision_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:onClick="Revision_layer"
        android:text="@string/Revision_button_name"
        android:textSize="30sp"
        app:backgroundTint="#C444595E"
        app:layout_constraintBottom_toTopOf="@+id/Kamar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContentShare_button" />

    <Button
        android:id="@+id/ContentShare_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:onClick="Resource_layer"
        android:text="@string/Content_share_button_name"
        android:textSize="30sp"
        app:backgroundTint="#C444595E"
        app:layout_constraintBottom_toTopOf="@+id/Revision_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTable_button" />

    <Button
        android:id="@+id/Account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="96dp"
        android:text="@string/Account_button_name"
        android:textSize="30sp"
        app:backgroundTint="#C444595E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Revision_button" />

</androidx.constraintlayout.widget.ConstraintLayout>