<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img8463"
    tools:context=".NewSchoolTimeTable">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="81dp"
        android:onClick="Save_change"
        android:text="@string/HM_edit_save"
        app:backgroundTint="#9271C0E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="81dp"
        android:onClick="Leave"
        android:text="@string/HM_edit_unsave"
        app:backgroundTint="#9271C0E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/SchoolTimetable_New_Location_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimetable_Location"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_New_Day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_New_Location" />

    <TextView
        android:id="@+id/SchoolTimetable_New_Day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimeTable_Date"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_New_Day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_New_Day" />

    <TextView
        android:id="@+id/SchoolTimetable_New_Class_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimetable_Class"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_New_Day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_New_Class" />

    <EditText
        android:id="@+id/SchoolTimetable_New_Day"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#C444595E"
        android:contentDescription="@string/SchoolTimeTable_Date"
        android:hint="@string/SchoolTimeTable_Date"
        android:inputType="date"
        android:maxLength="8"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/SchoolTimeTable_Date" />

    <EditText
        android:id="@+id/SchoolTimetable_New_Location"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#C444595E"
        android:contentDescription="@string/HM_Name"
        android:hint="@string/SchoolTimetable_Location"
        android:maxHeight="150dp"
        android:maxLength="56"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_New_Class"
        tools:text="@string/HM_Name" />

    <EditText
        android:id="@+id/SchoolTimetable_New_Class"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#C444595E"
        android:contentDescription="@string/HM_Class"
        android:hint="@string/SchoolTimetable_Class"
        android:maxLength="15"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_New_Day"
        tools:text="@string/HM_Class" />

    <TextView
        android:id="@+id/SchoolTimetable_New_Ending_time_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimetable_EndingTime"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_New_Day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_New_Ending_time" />

    <TextView
        android:id="@+id/SchoolTimetable_New_Starting_time_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimetable_StartingTime"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_New_Day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_New_Starting_time" />

    <EditText
        android:id="@+id/SchoolTimetable_New_Starting_time"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#C444595E"
        android:ems="10"
        android:hint="@string/SchoolTimetable_StartingTime"
        android:inputType="time"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_New_Location" />

    <EditText
        android:id="@+id/SchoolTimetable_New_Ending_time"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#C444595E"
        android:ems="10"
        android:hint="@string/SchoolTimetable_EndingTime"
        android:inputType="time"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_New_Starting_time" />


</androidx.constraintlayout.widget.ConstraintLayout>