<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tets9"
    tools:context=".EditSchoolTimetable">



    <TextView
        android:id="@+id/edit_SchoolTimetable_heading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:text="@string/SchoolTimetable_edit"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SchoolTimetable_Edit_Informtion_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/SchoolTimetable_EndingTime"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_Edit_Class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_Edit_Ending_time" />

    <TextView
        android:id="@+id/SchoolTimetable_Edit_Name_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/SchoolTimetable_StartingTime"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_Edit_Class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_Edit_Starting_time" />

    <EditText
        android:id="@+id/SchoolTimetable_Edit_Starting_time"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/SchoolTimetable_StartingTime"
        android:inputType="time"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_Edit_Location" />

    <EditText
        android:id="@+id/SchoolTimetable_Edit_Ending_time"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/SchoolTimetable_EndingTime"
        android:inputType="time"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_Edit_Starting_time" />

    <TextView
        android:id="@+id/SchoolTimetable_Edit_Class_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/SchoolTimetable_Class"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_Edit_Class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_Edit_Class" />

    <TextView
        android:id="@+id/SchoolTimetable_Edit_Location_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/SchoolTimetable_Location"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_Edit_Class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SchoolTimetable_Edit_Location" />

    <EditText
        android:id="@+id/SchoolTimetable_Edit_Class"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:hint="@string/SchoolTimetable_Class"
        android:maxLength="15"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolTimetable_Edit_Day" />

    <TextView
        android:id="@+id/schoolTimetable_Edit_Day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#7E151010"
        android:text="@string/SchoolTimeTable_Date"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/SchoolTimetable_Edit_Class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/schoolTimetable_Edit_Day" />

    <EditText
        android:id="@+id/schoolTimetable_Edit_Day"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/HM_Date"
        android:hint="@string/SchoolTimeTable_Date"
        android:inputType="date"
        android:maxLength="8"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/HM_Date" />

    <EditText
        android:id="@+id/SchoolTimetable_Edit_Location"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:hint="@string/SchoolTimetable_Location"
        android:maxLength="15"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimetable_Edit_Class" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="81dp"
        android:onClick="Leave"
        android:text="@string/HM_edit_unsave"
        app:backgroundTint="#9271C0E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="81dp"
        android:onClick="Save_change"
        android:text="@string/HM_edit_save"
        app:backgroundTint="#9271C0E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>