<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tets9"
    tools:context=".SchoolTimetable">

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:onClick="New_Homework"
        android:text="@string/New_School_timetable"
        android:textSize="24sp"
        app:backgroundTint="#A171C0E4"
        app:layout_constraintBottom_toTopOf="@+id/Homework_return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolTimeTbale_GridView" />

    <Button
        android:id="@+id/Homework_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="82dp"
        android:text="@string/Account_button_name"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:backgroundTint="#A143778F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Homework_return_button" />

    <Button
        android:id="@+id/Homework_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="82dp"
        android:onClick="Return"
        android:text="@string/Return_button_name"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:backgroundTint="#A143778F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Homework_account_button"
        app:layout_constraintStart_toEndOf="@+id/Homework_home_button"
        tools:text="@string/Return_button_name" />

    <Button
        android:id="@+id/Homework_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="82dp"
        android:onClick="Homepage"
        android:text="@string/Home_button_name"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:backgroundTint="#A143778F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Homework_return_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Heading_schooltimetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/School_timetable_heading_label"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/SchoolTimeTbale_GridView"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="160dp"
        android:horizontalSpacing="4dp"
        android:numColumns="5"
        android:verticalSpacing="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>